[package]
name = "byteslines-demo"
version = "0.1.0"
authors = ["Tristan Cacqueray <tdecacqu@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
memchr = "2.4"

[[bin]]
name = "lines"
path = "lines.rs"

[[bin]]
name = "readline"
path = "readline.rs"

[[bin]]
name = "byteslines"
path = "byteslines.rs"

[[bin]]
name = "byteslines-nosplit"
path = "byteslines-ns.rs"
